--- a/HTML/CSS/sideBarCss.css
+++ b/HTML/CSS/sideBarCss.css
@@ -1,13 +1,41 @@
-#cafeInfo{
-    border: 1px solid black;
+#cafeInfo {
+    top: 20px;              
+    left: 20px;             
+    width: 220px;
+    border: 2px solid gainsboro;
+    border-radius: 8px;
+    padding: 15px;
+    background: white;
+    z-index: 1000;
 }
-#sideMenu{
-    border: 1px solid black;
-    
+
+#cafeInfo p {
+    margin: 6px 0;
+    font-size: 14px;
+    color: gray;
 }
-#sideMenu li{
-    border-bottom: 1px solid black;
+
+#sideMenu {
+    position: fixed;
+    top: 200px;             
+    left: 10px;
+    width: 220px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    background: #ffffff;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    z-index: 1000;
 }
-a{
-    color: black;
+
+#sideMenu li {
+    margin-bottom: 10px;
+}
+
+
+#sideMenu a:hover {
+    background: deepskyblue;
+    color: #fff;
+    border-color: skyblue;
+    font-weight: bold;
 }
