--- a/HTML/CSS/templateCss.css
+++ b/HTML/CSS/templateCss.css
@@ -1,3 +1,11 @@
+* {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500px;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 #sideBar{
     float: left;
 }
