--- a/HTML/CSS/comCss.css
+++ b/HTML/CSS/comCss.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500px;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
 }
-
 li{
     list-style: none;
 }
